loggerapp/datalogger/driver/vrmagic/vrmusbcam2.h


typedef unsigned short int VRmWORD;

typedef unsigned int VRmDWORD;

typedef unsigned int VRmBOOL;

typedef const char* VRmSTRING;


/// "size" type (int)
typedef VRM_STRUCT _VRmSizeI {
	int m_width;
	int m_height;
} VRmSizeI;


/// "point" type (int)
typedef VRM_STRUCT _VRmPointI {
	int m_x;
	int m_y;
} VRmPointI;


/// "rect" type (int)
typedef VRM_STRUCT _VRmRectI {
	int m_left;
	int m_top;
	int m_width;
	int m_height;
} VRmRectI;


/// @}
// ------------------------------------------------------------------------
/// @defgroup General                   Error Handling / General Management
// ------------------------------------------------------------------------
/// @{

/// return value values of API function calls
typedef VRM_ENUM _VRmRetVal
{
	/// return value for failed function call
	VRM_FAILED=0,
	/// return value for successful function call
	VRM_SUCCESS=1
} VRmRetVal;


/// error codes used by get last error code
typedef VRM_ENUM _VRmErrorCode
{
	//error code for info, these don't create log file entries
	VRM_ERROR_CODE_SUCCESS 					=	0x00000000,

	VRM_ERROR_CODE_FUNCTION_CALL_TIMEOUT	=	0x00040003,

	//error code for failures, these create log file entries
	VRM_ERROR_CODE_GENERIC_ERROR			=	0x80004005,

	VRM_ERROR_CODE_TRIGGER_TIMEOUT			=	0x80040001,
	VRM_ERROR_CODE_TRIGGER_STALL			=	0x80040002,
	VRM_ERROR_CODE_TRANSFER_TIMEOUT			=	0x80040004

} VRmErrorCode;



/// retrieve the error string of the last function call.
/// if an API function fails (return value is VRM_FAILED) use this function
/// to retrieve an error description as C string.
/// NOTE: the returned string is only guaranteed to be valid until the next API call
VRM_EXTERN VRmSTRING VRM_API VRmUsbCamGetLastError(void);


/// retrieve the error code of the last function call.
/// if an API function fails (return is value VRM_FAILED) use this function
/// to retrieve an error error code as int.
/// NOTE: the returned code is only guaranteed to be valid until the next API call
VRM_EXTERN int VRM_API VRmUsbCamGetLastErrorCode(void);


/// reset the error code and error string to success.
VRM_EXTERN void VRM_API VRmUsbCamClearLastError(void);


/// last error was trigger timeout.
/// if an API function fails (return value VRM_FAILED) use this function
/// to check if error was a trigger timeout
VRM_EXTERN VRmBOOL VRM_API VRmUsbCamLastErrorWasTriggerTimeout(void);


/// last error was trigger stall.
/// if an API function fails (return value VRM_FAILED) use this function
/// to check if error was a trigger stall
VRM_EXTERN VRmBOOL VRM_API VRmUsbCamLastErrorWasTriggerStall(void);


/// enable logging.
/// for customer support, enable the logging facilities of the VRmUsbCam
/// library.
/// you may want to add following lines to your source code:
/// @code
///   ...
///   #ifdef _DEBUG
///      VRmUsbCamEnableLogging();
///   #endif
///   ...
/// @endcode
/// NOTE: Only the first successfull call to VRmUsbCamEnableLogging or
/// VRmUsbCamEnableLoggingEx will have an effect. Subsequent calls will
/// be ignored.
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamEnableLogging(void);


/// enable logging with selectable file name
/// for customer support, enable the logging facilities of the VRmUsbCam
/// library.
/// The file "f_log_file_name" will be newly created.
/// you may want to add following lines to your source code:
/// @code
///   ...
///   #ifdef _DEBUG
///      VRmUsbCamEnableLoggingEx( LOG_FILE_NAME );
///   #endif
///   ...
/// @endcode
/// NOTE: Only the first successful call to VRmUsbCamEnableLogging or
/// VRmUsbCamEnableLoggingEx will have an effect. Subsequent calls will
/// be ignored.
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamEnableLoggingEx( VRmSTRING f_log_file_name );


/// get the version of the API.
/// the version number is represented as decimal integer with 4 digits,
/// ie. API version v2.3.0.0 is represented as decimal 2300.
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetVersion(VRmDWORD* fp_version);


/// you should call this at application exit in order to cleanup
/// all resources left over from VRmUsbCam API.
/// AFTER THAT, NO OTHER API FUNCTIONS MUST BE CALLED ANY LONGER!
///
/// easiest way is to use the following call at application init:
/// @code
///   atexit(VRmUsbCamCleanup);
/// @endcode
VRM_EXTERN void VRM_API VRmUsbCamCleanup(void);
typedef struct VRmUsbCamDeviceInternal* VRmUsbCamDevice;

/// struct to identify devices.
/// device key is a unique combination of serial, manufacturer
/// and product string
/// NOTE: the strings within this struct are only guaranteed to be valid
/// until the next call to VRmUsbCamUpdateDeviceKeyList()!
typedef VRM_STRUCT _VRmDeviceKey
{
	/// serial number
	VRmDWORD m_serial;
	/// manufacturer name string
	VRmSTRING mp_manufacturer_str;
	/// product name string
	VRmSTRING mp_product_str;
	/// busy means the device is already used by another application
	VRmBOOL m_busy;
	/// private = additional internal data
	void* mp_private;
}VRmDeviceKey;


/// search for compatible devices.
/// if your application wants to support PnP, you should call this function
/// periodically, at least once every 5 seconds, and handle the PnP events
/// using static callback handlers, see VRmUsbCamRegisterStaticCallback()
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamUpdateDeviceKeyList(void);


/// search for compatible devices.
/// use parameters to control which devices are listed.
/// f_local: list local devices (on intelligent camera)
/// f_usb: list devices connected via USB
/// f_ethernet: list devices connected via Ethernet
/// if your application wants to support PnP, you should call this function
/// periodically, at least once every 5 seconds, and handle the PnP events
/// using static callback handlers, see VRmUsbCamRegisterStaticCallback()
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamUpdateDeviceKeyListEx(VRmBOOL f_local, VRmBOOL f_usb, VRmBOOL f_ethernet);


/// trigger a full rescan of the device key list on the next call to VRmUsbCamUpdateDeviceKeyList(Ex)
/// usage: use this function immediately followed by a call to VRmUsbCamUpdateDeviceKeyList(Ex)
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamResetDeviceKeyList(void);


/// get number of attached devices
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetDeviceKeyListSize(VRmDWORD* fp_size);


/// get device key by index.
/// returns the device key by index = [0...number of attached devices-1],
/// use VRmUsbCamFreeDeviceKey() to free the key when you're done
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetDeviceKeyListEntry(VRmDWORD f_index, VRmDeviceKey** fpp_device_key);


/// get vendor id (16bit) of device key
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetVendorId(const VRmDeviceKey* fcp_device_key, VRmWORD* fp_vendor_id);


/// get product id (16bit) of device key
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetProductId(const VRmDeviceKey* fcp_device_key, VRmWORD* fp_product_id);


/// get group id (16bit) of device key
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetGroupId(const VRmDeviceKey* fcp_device_key, VRmWORD* fp_group_id);


/// get serial string of device key.
/// note: the returned string is only guaranteed to be valid until the next call to VRmUsbCamUpdateDeviceKeyList()!
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetSerialString(const VRmDeviceKey* fcp_device_key, VRmSTRING* fp_serial_str);


/// get IP address string of device key (for non-ethernet devices, this is an empty string).
/// note: the returned string is only guaranteed to be valid until the next API call!
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetIpAddress(const VRmDeviceKey* fcp_device_key, VRmSTRING* fp_value);


/// get IP address string of local interface that is to be used for communication with
/// device of device key (for non-ethernet devices, this is an empty string).
/// note: the returned string is only guaranteed to be valid until the next API call!
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetLocalIpAddress(const VRmDeviceKey* fcp_device_key, VRmSTRING* fp_value);


/// compare two device keys.
/// sets target of fp_result to 0 if keys are equal, sets it to 1 otherwise
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamCompareDeviceKeys(const VRmDeviceKey* fcp_device_key1, const VRmDeviceKey* fcp_device_key2, VRmBOOL* fp_result);


/// free device key received by VRmUsbCamGetDeviceKeyListEntry()
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamFreeDeviceKey(VRmDeviceKey** fpp_device_key);


/// open device.
/// open device using device key returned by VRmUsbCamGetDeviceKeyListEntry(),
/// to release fp_device use VRmUsbCamCloseDevice()
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamOpenDevice(const VRmDeviceKey* fcp_device_key, VRmUsbCamDevice* fp_device);