loggerapp/datalogger/driver/vrmagic/vrmusbcamapi.py


class struct__VRmSizeI(Structure):
    pass


struct__VRmSizeI.__slots__ = [
    'm_width',
    'm_height',
]
struct__VRmSizeI._fields_ = [
    ('m_width', c_int),
    ('m_height', c_int),
]

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 56
VRmSizeI = struct__VRmSizeI

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 62


class struct__VRmPointI(Structure):
    pass


struct__VRmPointI.__slots__ = [
    'm_x',
    'm_y',
]
struct__VRmPointI._fields_ = [
    ('m_x', c_int),
    ('m_y', c_int),
]

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 62
VRmPointI = struct__VRmPointI

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 70


class struct__VRmRectI(Structure):
    pass


struct__VRmRectI.__slots__ = [
    'm_left',
    'm_top',
    'm_width',
    'm_height',
]
struct__VRmRectI._fields_ = [
    ('m_left', c_int),
    ('m_top', c_int),
    ('m_width', c_int),
    ('m_height', c_int),
]

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 70
VRmRectI = struct__VRmRectI

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 85
enum__VRmRetVal = c_int

VRM_FAILED = 0  # /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 85

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 85
VRM_SUCCESS = 1

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 85
VRmRetVal = enum__VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 102
enum__VRmErrorCode = c_int

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 102
VRM_ERROR_CODE_SUCCESS = 0

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 102
VRM_ERROR_CODE_FUNCTION_CALL_TIMEOUT = 262147

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 102
VRM_ERROR_CODE_GENERIC_ERROR = 2147500037

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 102
VRM_ERROR_CODE_TRIGGER_TIMEOUT = 2147745793

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 102
VRM_ERROR_CODE_TRIGGER_STALL = 2147745794

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 102
VRM_ERROR_CODE_TRANSFER_TIMEOUT = 2147745796

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 102
VRmErrorCode = enum__VRmErrorCode

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 109
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetLastError'):
    VRmUsbCamGetLastError = _libs['libvrmusbcam2.so'].VRmUsbCamGetLastError
    VRmUsbCamGetLastError.argtypes = []
    VRmUsbCamGetLastError.restype = VRmSTRING

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 115
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetLastErrorCode'):
    VRmUsbCamGetLastErrorCode = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetLastErrorCode
    VRmUsbCamGetLastErrorCode.argtypes = []
    VRmUsbCamGetLastErrorCode.restype = c_int

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 118
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamClearLastError'):
    VRmUsbCamClearLastError = _libs['libvrmusbcam2.so'].VRmUsbCamClearLastError
    VRmUsbCamClearLastError.argtypes = []
    VRmUsbCamClearLastError.restype = None

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 123
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamLastErrorWasTriggerTimeout'):
    VRmUsbCamLastErrorWasTriggerTimeout = _libs[
        'libvrmusbcam2.so'].VRmUsbCamLastErrorWasTriggerTimeout
    VRmUsbCamLastErrorWasTriggerTimeout.argtypes = []
    VRmUsbCamLastErrorWasTriggerTimeout.restype = VRmBOOL

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 128
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamLastErrorWasTriggerStall'):
    VRmUsbCamLastErrorWasTriggerStall = _libs[
        'libvrmusbcam2.so'].VRmUsbCamLastErrorWasTriggerStall
    VRmUsbCamLastErrorWasTriggerStall.argtypes = []
    VRmUsbCamLastErrorWasTriggerStall.restype = VRmBOOL

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 144
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamEnableLogging'):
    VRmUsbCamEnableLogging = _libs['libvrmusbcam2.so'].VRmUsbCamEnableLogging
    VRmUsbCamEnableLogging.argtypes = []
    VRmUsbCamEnableLogging.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 161
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamEnableLoggingEx'):
    VRmUsbCamEnableLoggingEx = _libs[
        'libvrmusbcam2.so'].VRmUsbCamEnableLoggingEx
    VRmUsbCamEnableLoggingEx.argtypes = [VRmSTRING]
    VRmUsbCamEnableLoggingEx.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 166
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetVersion'):
    VRmUsbCamGetVersion = _libs['libvrmusbcam2.so'].VRmUsbCamGetVersion
    VRmUsbCamGetVersion.argtypes = [POINTER(VRmDWORD)]
    VRmUsbCamGetVersion.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 176
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamCleanup'):
    VRmUsbCamCleanup = _libs['libvrmusbcam2.so'].VRmUsbCamCleanup
    VRmUsbCamCleanup.argtypes = []
    VRmUsbCamCleanup.restype = None

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 189


class struct_VRmUsbCamDeviceInternal(Structure):
    pass

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 189
VRmUsbCamDevice = POINTER(struct_VRmUsbCamDeviceInternal)

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 209


class struct__VRmDeviceKey(Structure):
    pass


struct__VRmDeviceKey.__slots__ = [
    'm_serial',
    'mp_manufacturer_str',
    'mp_product_str',
    'm_busy',
    'mp_private',
]
struct__VRmDeviceKey._fields_ = [
    ('m_serial', VRmDWORD),
    ('mp_manufacturer_str', VRmSTRING),
    ('mp_product_str', VRmSTRING),
    ('m_busy', VRmBOOL),
    ('mp_private', POINTER(None)),
]

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 209
VRmDeviceKey = struct__VRmDeviceKey

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 215
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamUpdateDeviceKeyList'):
    VRmUsbCamUpdateDeviceKeyList = _libs[
        'libvrmusbcam2.so'].VRmUsbCamUpdateDeviceKeyList
    VRmUsbCamUpdateDeviceKeyList.argtypes = []
    VRmUsbCamUpdateDeviceKeyList.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 225
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamUpdateDeviceKeyListEx'):
    VRmUsbCamUpdateDeviceKeyListEx = _libs[
        'libvrmusbcam2.so'].VRmUsbCamUpdateDeviceKeyListEx
    VRmUsbCamUpdateDeviceKeyListEx.argtypes = [VRmBOOL, VRmBOOL, VRmBOOL]
    VRmUsbCamUpdateDeviceKeyListEx.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 229
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamResetDeviceKeyList'):
    VRmUsbCamResetDeviceKeyList = _libs[
        'libvrmusbcam2.so'].VRmUsbCamResetDeviceKeyList
    VRmUsbCamResetDeviceKeyList.argtypes = []
    VRmUsbCamResetDeviceKeyList.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 232
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetDeviceKeyListSize'):
    VRmUsbCamGetDeviceKeyListSize = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetDeviceKeyListSize
    VRmUsbCamGetDeviceKeyListSize.argtypes = [POINTER(VRmDWORD)]
    VRmUsbCamGetDeviceKeyListSize.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 237
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetDeviceKeyListEntry'):
    VRmUsbCamGetDeviceKeyListEntry = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetDeviceKeyListEntry
    VRmUsbCamGetDeviceKeyListEntry.argtypes = [
        VRmDWORD, POINTER(POINTER(VRmDeviceKey))
    ]
    VRmUsbCamGetDeviceKeyListEntry.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 240
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetVendorId'):
    VRmUsbCamGetVendorId = _libs['libvrmusbcam2.so'].VRmUsbCamGetVendorId
    VRmUsbCamGetVendorId.argtypes = [POINTER(VRmDeviceKey), POINTER(VRmWORD)]
    VRmUsbCamGetVendorId.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 243
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetProductId'):
    VRmUsbCamGetProductId = _libs['libvrmusbcam2.so'].VRmUsbCamGetProductId
    VRmUsbCamGetProductId.argtypes = [POINTER(VRmDeviceKey), POINTER(VRmWORD)]
    VRmUsbCamGetProductId.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 246
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetGroupId'):
    VRmUsbCamGetGroupId = _libs['libvrmusbcam2.so'].VRmUsbCamGetGroupId
    VRmUsbCamGetGroupId.argtypes = [POINTER(VRmDeviceKey), POINTER(VRmWORD)]
    VRmUsbCamGetGroupId.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 250
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetSerialString'):
    VRmUsbCamGetSerialString = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetSerialString
    VRmUsbCamGetSerialString.argtypes = [
        POINTER(VRmDeviceKey), POINTER(VRmSTRING)
    ]
    VRmUsbCamGetSerialString.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 254
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetIpAddress'):
    VRmUsbCamGetIpAddress = _libs['libvrmusbcam2.so'].VRmUsbCamGetIpAddress
    VRmUsbCamGetIpAddress.argtypes = [
        POINTER(VRmDeviceKey), POINTER(VRmSTRING)
    ]
    VRmUsbCamGetIpAddress.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 259
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetLocalIpAddress'):
    VRmUsbCamGetLocalIpAddress = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetLocalIpAddress
    VRmUsbCamGetLocalIpAddress.argtypes = [
        POINTER(VRmDeviceKey), POINTER(VRmSTRING)
    ]
    VRmUsbCamGetLocalIpAddress.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 263
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamCompareDeviceKeys'):
    VRmUsbCamCompareDeviceKeys = _libs[
        'libvrmusbcam2.so'].VRmUsbCamCompareDeviceKeys
    VRmUsbCamCompareDeviceKeys.argtypes = [
        POINTER(VRmDeviceKey), POINTER(VRmDeviceKey), POINTER(VRmBOOL)
    ]
    VRmUsbCamCompareDeviceKeys.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 266
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamFreeDeviceKey'):
    VRmUsbCamFreeDeviceKey = _libs['libvrmusbcam2.so'].VRmUsbCamFreeDeviceKey
    VRmUsbCamFreeDeviceKey.argtypes = [POINTER(POINTER(VRmDeviceKey))]
    VRmUsbCamFreeDeviceKey.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 271
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamOpenDevice'):
    VRmUsbCamOpenDevice = _libs['libvrmusbcam2.so'].VRmUsbCamOpenDevice
    VRmUsbCamOpenDevice.argtypes = [
        POINTER(VRmDeviceKey), POINTER(VRmUsbCamDevice)
    ]
    VRmUsbCamOpenDevice.restype = VRmRetVal
